Remove superfluous logging